k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paper-social
spec:
  selector:
    app: paper-social
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
